4 consultas resolvidas, só faltam 2!