@@ -15,30 +15,30 @@ public class sistemaHospitalar {
 
         Paciente.alocar_paciente();
 
-//        listaConsultas.get(0).exibir();
-//        System.out.println(Consulta.exibir());
-//        System.out.println(listaMedicos.getFirst().exibir_consultas_by_medico());
-        System.out.println(listaPacientes.getFirst().exibir_consultas_by_paciente());
+       // listaConsultas.get(0).exibir();
+       // System.out.println(Consulta.exibir());
+       // System.out.println(listaMedicos.getFirst().exibir_consultas_by_medico());
+       //  System.out.println(listaPacientes.getFirst().exibir_consultas_by_paciente());
 
-//        Locale localeBR = new Locale("pt", "BR");
-//        LocalDate date = LocalDate.of(2024, 05, 11);
-//        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy", localeBR);
-//        String text = date.format(formatter);
-//        LocalDate parsedDate = LocalDate.parse(text, formatter);
-//
-//        SimpleDateFormat fmt = new SimpleDateFormat("dd MM yyyy", localeBR);
-//        System.out.println( fmt.format(new Date()) );
-//
-//        System.out.println(parsedDate);
+       // Locale localeBR = new Locale("pt", "BR");
+       // LocalDate date = LocalDate.of(2024, 05, 11);
+       // DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy", localeBR);
+       // String text = date.format(formatter);
+       // LocalDate parsedDate = LocalDate.parse(text, formatter);
 
-//        LocalDate data = listaConsultas.getFirst().get_data();
-//
-//        if (data.isAfter(LocalDate.now()))
-//            System.out.println("True");
-//        else System.out.println("False");
-//
-//        String data2 = "07/05/2024";
-//        System.out.println(Consulta.str_to_data(data2));
+       // SimpleDateFormat fmt = new SimpleDateFormat("dd MM yyyy", localeBR);
+       // System.out.println( fmt.format(new Date()) );
+
+       // System.out.println(parsedDate);
+
+       // LocalDate data = listaConsultas.getFirst().get_data();
+
+       // if (data.isAfter(LocalDate.now()))
+       //     System.out.println("True");
+       // else System.out.println("False");
+
+       // String data2 = "07/05/2024";
+       // System.out.println(Consulta.str_to_data(data2));
 
         Scanner scanner = new Scanner(System.in);
 
